@@ -25,8 +25,8 @@ Dist::Zilla::Plugin::GithubMeta = 0.08
 Dist::Zilla::Plugin::PodWeaver = 3.093321
 Dist::Zilla::Plugin::MetaProvides = 1.10027518
 Dist::Zilla::Plugin::ReadmeFromPod = 0.12
-Dist::Zilla::Plugin::CompileTests = 1.092870
-Dist::Zilla::Plugin::Git = 1.093410
+Dist::Zilla::Plugin::CompileTests = 1.101800
+Dist::Zilla::Plugin::Git = 1.102040
 Dist::Zilla::Plugin::Twitter = 0.007
 Dist::Zilla::Plugin::ReportVersions::Tiny = 1.01
 Dist::Zilla::Plugin::KwaliteeTests = 1.101420
